[gd_scene load_steps=4 format=3 uid="uid://dbiub7g0in2i6"]

[ext_resource type="Script" uid="uid://cnbqjxqt2xkyf" path="res://interface/hud/pause_menu.gd" id="1_my77e"]
[ext_resource type="PackedScene" uid="uid://cp3vdpmngisqc" path="res://interface/options/options_menu.tscn" id="2_5mfgj"]
[ext_resource type="Script" path="res://interface/components/modal_component.gd" id="3_gwioi"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 1
script = ExtResource("1_my77e")

[node name="OptionsContainer" parent="." instance=ExtResource("2_5mfgj")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0

[node name="PauseContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseRoot" type="PanelContainer" parent="PauseContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseContainer/PauseRoot"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer/PauseRoot/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PauseLabel" type="Label" parent="PauseContainer/PauseRoot/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseContainer/PauseRoot/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 0
text = "RESUME"

[node name="OptionsButton" type="Button" parent="PauseContainer/PauseRoot/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 0
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="PauseContainer/PauseRoot/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 0
text = "QUIT"

[node name="ModalComponent" type="Control" parent="." node_paths=PackedStringArray("activator_root", "activator", "modal", "modal_initial_focus")]
anchors_preset = 0
script = ExtResource("3_gwioi")
activator_root = NodePath("../PauseContainer/PauseRoot")
activator = NodePath("../PauseContainer/PauseRoot/MarginContainer/VBoxContainer/OptionsButton")
modal = NodePath("../OptionsContainer/OptionsRoot")
modal_initial_focus = NodePath("../OptionsContainer/OptionsRoot/MarginContainer/VBoxContainer/DisplayButton")

[editable path="OptionsContainer"]
